kubernetes/apps/files/app/aria2/default.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aria2
spec:
  parentRefs:
    - name: default
      sectionName: https-wildcard
      namespace: gateway-api
  hostnames:
    - aria2.${IDVN_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aria2
          port: 6800
