kubernetes/apps/files/app/aria2/idvn.tcp-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: idvn-aria2-http
spec:
  parentRefs:
    - name: gateway-idvn-public
      sectionName: aria2
      namespace: gateway-api
  rules:
    - backendRefs:
        - name: aria2
          port: 6800
